hphp/hack/test/decl/module_methods.php.typecheck.exp
File "module_methods.php", line 14, characters 7-7:
You cannot access internal members outside of a module (Typing[4112])
  File "module_methods.php", line 9, characters 19-19:
  This member is internal
